--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "build": "vue-tsc -b && vite build"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.9.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.0",
+    "@fortawesome/free-regular-svg-icons": "^6.7.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tauri-apps/cli": "^2.9.0",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
     "vue-tsc": "^3.1.0"
