--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
@@ -26,6 +27,7 @@
     "eslint-plugin-vue": "^9.26.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
-    "vue-tsc": "^3.1.0"
+    "vue-tsc": "^3.1.0",
+    "vue3-bcui": "^0.3.0-alpha.2"
   }
 }
