workflow 基本功能和样式

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,8 +4,10 @@
     "target": "ES2023",
     "lib": ["ES2023"],
     "module": "ESNext",
+    "moduleResolution": "bundler",
     "types": ["node"],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
 }
