--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.0",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.3",
+    "@vue-flow/node-toolbar": "^1.1.1",
     "vue": "^3.5.22",
     "vue-router": "4"
   },
@@ -19,15 +22,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tauri-apps/cli": "^2.9.0",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
-    "vue-tsc": "^3.1.0",
-    "vue3-bcui": "^0.3.0-alpha.2"
+    "vue-tsc": "^3.1.0"
   }
 }
