--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "build": "vue-tsc -b && vite build"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.9.0",
-    "@vue-flow/background": "^1.3.2",
-    "@vue-flow/controls": "^1.1.3",
-    "@vue-flow/node-toolbar": "^1.1.1",
-    "vue": "^3.5.22",
-    "vue-router": "4"
+    "@tauri-apps/api": "^2.9.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.0",
@@ -25,11 +20,18 @@
     "@types/mime-types": "^3.0.1",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.3",
+    "@vue-flow/core": "^1.47.0",
+    "@vue-flow/node-toolbar": "^1.1.1",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
-    "vue-tsc": "^3.1.0"
+    "vue": "^3.5.22",
+    "vue-router": "4",
+    "vue-tsc": "^3.1.0",
+    "vue3-bcui": "^0.3.0-alpha.2"
   }
 }
