--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "renflow.runner"
+  ],
   "scripts": {
+    "lint": "eslint . --ext .ts,.vue",
     "dev": "vite",
     "dev:tauri": "tauri dev -c src-tauri/tauri.conf.json",
-    "build": "vue-tsc -b && vite build"
+    "build": "vue-tsc -b && vite build",
+    "build:runner": "yarn workspace renflow.runner build"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.0"
@@ -16,6 +21,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@rushstack/eslint-patch": "^1.14.0",
     "@tauri-apps/cli": "^2.9.0",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^24.6.0",
@@ -24,9 +30,11 @@
     "@vue-flow/controls": "^1.1.3",
     "@vue-flow/core": "^1.47.0",
     "@vue-flow/node-toolbar": "^1.1.1",
+    "@vue/eslint-config-typescript": "=13.0.0",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
+    "renflow.runner": "*",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
     "vue": "^3.5.22",
