--- a/renflow.runner/package.json
+++ b/renflow.runner/package.json
@@ -28,7 +28,8 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run:json": "tsx src/index.ts",
+    "run:json:prod": "node dist/index.js"
   },
   "keywords": [
     "onebot",
@@ -42,7 +43,13 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "dependencies": {
+    "amqplib": "^0.10.3",
+    "fastq": "^1.11.0",
+    "uuid": "^13.0.0"
+  },
   "devDependencies": {
+    "@types/amqplib": "^0.10.8",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^24.9.1",
     "jsonpath": "^1.1.1",
