--- a/renflow.runner/package.json
+++ b/renflow.runner/package.json
@@ -56,6 +56,7 @@
     "tiny-pinyin": "^1.3.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3"
   }
 }
