--- a/renflow.runner/tsconfig.json
+++ b/renflow.runner/tsconfig.json
@@ -15,7 +15,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "types": ["node"],
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
