--- a/renflow.runner/package.json
+++ b/renflow.runner/package.json
@@ -43,20 +43,20 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "dependencies": {
-    "amqplib": "^0.10.3",
-    "fastq": "^1.11.0",
-    "uuid": "^13.0.0"
-  },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^24.9.1",
+    "@types/shell-quote": "^1.7.5",
+    "amqplib": "^0.10.3",
+    "fastq": "^1.11.0",
     "jsonpath": "^1.1.1",
+    "shell-quote": "^1.8.3",
     "tiny-pinyin": "^1.3.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "yargs-parser": "^22.0.0"
   }
 }
