无穷无尽的功能
:sparkles: 消息过滤器 shell 解析功能实现
:sparkles: 节点设置面板支持指定 component
:sparkles: 支持工作流全局变量，方便跨节点获取数据
:sparkles: 节点设置（settings type）功能调整，现在允许同时显示参数和节点设置
:sparkles: 新增 HTML 渲染节点（后台渲染模式还未测试）
:sparkles: 完善发送文本消息节点功能
:sparkles: 新增消息发送节点，提供拖拽式组装消息体的功能（跨 bot 发送暂未实现）
:art: 对编辑模式下的工作流执行接下来逻辑调整
:wastebasket: 去除 @api 注解，完善 callApi 功能
:bug: 修复节点运行时误把 nodeId 传递为 nodeType 的问题
:bug: 修复在 UI 模式下，节点执行失败事件被反复触发的问题
:bug: 修复继承类名获取有误导致的消息处理异常
:bug: 修复节点设置面板动画异常的问题

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@vue-flow/node-toolbar": "^1.1.1",
     "@vue/eslint-config-typescript": "=13.0.0",
     "@vue/tsconfig": "^0.8.1",
+    "dompurify": "^3.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
+    "html2canvas": "^1.4.1",
     "renflow.runner": "*",
     "typescript": "~5.9.3",
     "vite": "^7.1.7",
