--- a/renflow.runner/package.json
+++ b/renflow.runner/package.json
@@ -45,18 +45,24 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.8",
+    "@types/codemirror": "^5.60.17",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^24.9.1",
     "@types/shell-quote": "^1.7.5",
     "amqplib": "^0.10.3",
+    "class-transformer": "^0.5.1",
+    "codemirror": "^5",
+    "codemirror-editor-vue3": "^2.8.0",
     "fastq": "^1.11.0",
     "jsonpath": "^1.1.1",
+    "mri": "^1.2.0",
+    "puppeteer": "^24.28.0",
+    "reflect-metadata": "^0.2.2",
     "shell-quote": "^1.8.3",
     "tiny-pinyin": "^1.3.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
-    "ws": "^8.18.3",
-    "yargs-parser": "^22.0.0"
+    "ws": "^8.18.3"
   }
 }
